# qjson

./: CMakeLists.txt  CMakePresets.json  README.md  README_CN.md
src/: demo.cpp  proc.h  qjson.cpp  qjson.h
tests/: test_array.cpp  test_object.cpp
